// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QualificationButtonElement must match the snapshot with default Props 1`] = `
<QualifyButtonStyle
  aria-busy={false}
  aria-label="foo"
  color="red"
  data-cy-button="qualification"
  onClick={[Function]}
>
  <span
    aria-hidden={true}
  >
    foo
  </span>
  <CounterStyle
    aria-hidden={true}
  >
    +1
  </CounterStyle>
</QualifyButtonStyle>
`;

exports[`QualificationButtonElement must return the diff between snapshot when proposal is qualified or not 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,9 +1,9 @@
  <QualifyButtonStyle
    aria-busy={false}
    aria-label="foo"
-   className="qualified"
+   className={false}
    color="red"
    data-cy-button="qualification"
    onClick={[Function onClick]}
  >
    <span
@@ -12,8 +12,8 @@
      foo
    </span>
    <CounterStyle
      aria-hidden={true}
    >
-     0
+     +1
    </CounterStyle>
  </QualifyButtonStyle>
`;
